<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Pixel Unlocker</string>

    <!--activity_main.xml-->
    <string name="reset">Reset</string>
    <string name="device_to_spoof">Device to spoof</string>
    <string name="spoofs_build_and_features">Spoofs build.prop and feature flags.</string>
    <string name="customize_feature_flags">Customize feature flags.</string>
    <string name="feature_flags_changed">Feature flags changed!</string>
    <string name="spoof_only_in_google_photos">Make sure to spoof only in Google Photos.</string>
    <string name="spoof_only_in_google_photos_desc">In LSPosed, the module is by default only activated for Google Photos.
    If you want to use it in other apps, then keep this toggle <b>OFF</b>.</string>
    <string name="override_rom_feature_levels">Override ROM feature levels.</string>
    <string name="override_rom_feature_levels_desc">Pass false to hooked method for higher feature levels present in ROM
    if user selects a lower Pixel feature level. <b>(Recommended)</b></string>
    <string name="force_stop_google_photos">Force stop\nGoogle Photos</string>
    <string name="module_not_enabled">
        \n
        Looks like the this app module is not enabled.\n
        Please enable it in LSPosed / EdXposed, then reboot.\n
        If already enabled, then just reboot. If that does not work, kindly uninstall and reinstall.
    </string>
    <string name="close">Close</string>
    <string name="open_google_photos">Open Google Photos</string>
    <string name="telegram_group">Telegram group!</string>
    <string name="update_available">App update available!</string>

    <!--changelog-->
    <string name="version_head">Version 4.1</string>
    <string name="version_desc">
        \n
        # In light of recent event of Vanced project getting shut down because of using Youtube logo,
        this app\'s logo has been updated to avoid any legal conflict.\n
    </string>

    <!--ActivityMain.xml-->
    <string name="please_force_stop_google_photos">Please force stop Google Photos to take effect.</string>
    <string name="export_config">Export configuration</string>
    <string name="export_config_desc">Save or share your settings of this module with others.\n
        \"Save\" will prompt to select a location to export the settings as a JSON file.
    </string>
    <string name="export_complete">Export complete!</string>
    <string name="share">Share</string>
    <string name="select_a_location">Select a location to save.</string>
    <string name="share_config_file">Share configuration file</string>
    <string name="import_config">Import configuration</string>
    <string name="import_config_desc">This will open a system window to select the configuration file.</string>
    <string name="share_error">Share error!</string>
    <string name="read_error">Read error! Make sure to select a proper file!</string>
    <string name="import_complete">Import complete!</string>
    <string name="advanced_options">Advanced options</string>

    <!--feature_customize.xml-->
    <string name="save">Save</string>

    <!--advanced_options_activity.xml-->
    <string name="enable_verbose_logging">Enable verbose logging</string>
    <string name="enable_verbose_logging_desc">More debug information in LSPosed / EdXposed logs and Android logcat.\n
        To share logs, open LSPosed / EdXposed -> Logs -> top Save icon. Then share the created file.
    </string>
    <string name="spoof_android_version">Spoof android version.</string>
    <string name="spoof_android_version_desc">Do not set an Android version greater than your current version.\n
        Example, if your Android version is <b>Pie</b>, you can set <b>Nougat / Oreo / Pie</b>, but not Q / R / S.
    </string>
    <string name="this_might_cause_crash">This might cause spoofed Apps to immediately crash!</string>
    <string name="dont_spoof_android_version">Don\'t spoof Android version <b>(Recommended)</b></string>
    <string name="follow_spoof_device_version">Follow spoof device Android version.</string>
    <string name="manually_set_android_version">Manually set Android version.</string>

    <!--Utils.kt-->
    <string name="killing_please_wait">Killing… please wait.</string>
    <string name="failed_to_stop_package">Failed to stop package. Please stop manually.</string>
    <string name="failed_to_launch_package">Failed to launch. Please start manually.</string>
    <string name="ignore">Ignore</string>
    <string name="quit">Quit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_app">Search app..</string>
    <string name="only_spoof_these_apps">Only spoof these apps</string>
    <string name="per_app_spoof">Change Spoofed Device for App</string>
</resources>