<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view_for_snackbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_to_spoof"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spoofs_build_and_features" />

            </LinearLayout>

            <Spinner
                android:id="@+id/device_spoofer_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <LinearLayout
            android:id="@+id/per_app_spoof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Per App Spoof"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <LinearLayout
            android:id="@+id/customize_feature_flags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customize_feature_flags"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/feature_flags_changed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.0"
                android:text="@string/feature_flags_changed"
                android:textColor="?android:attr/colorPrimary" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/override_rom_feature_levels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/override_rom_feature_levels"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/override_rom_feature_levels_desc"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/advanced_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/advanced_options"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/update_available_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/update_available"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:visibility="gone" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="5dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>